--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,11 @@
 #  Configuration
 ###########################
 
+# remap prefix to Control-a
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
 # increase scroll-back history
 set -g history-limit 30000
 
@@ -77,8 +82,8 @@ set -g pane-active-border-fg green
 set -g pane-active-border-bg black
 
 # for Powerline
-run-shell "powerline-daemon -q"
-source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+# run-shell "powerline-daemon -q"
+# source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 # use 256 term for pretty colors
 set -g default-terminal "screen-256color"
