--- a/tmux.conf
+++ b/tmux.conf
@@ -10,13 +10,10 @@ bind C-a send-prefix
 # increase scroll-back history
 set -g history-limit 30000
 
+# mouse options
+set -g mouse-utf8 on
+set -g mouse on
 
-
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
-set-option -g mouse-select-pane on
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
 
@@ -37,6 +34,11 @@ set-window-option -g window-status-activity-attr bold,blink,underscore
 # re-number windows when one is closed
 set -g renumber-windows on
 
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
 
 ###########################
