solarized theme for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -65,28 +65,21 @@ set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M #[fg=red]#(ba
 # Colors
 ###########################
 
-# color status bar
-set -g status-bg colour235
-set -g status-fg white
-
 # dim window
-set-window-option -g window-status-attr dim
-
-# highlight current window
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
-set-window-option -g window-status-current-attr bright
-
-# set color of active pane
-set -g pane-border-fg colour235
-set -g pane-border-bg black
-set -g pane-active-border-fg green
-set -g pane-active-border-bg black
-
-# for Powerline
-# run-shell "powerline-daemon -q"
-# source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+#set-window-option -g window-status-attr dim
 
 # use 256 term for pretty colors
 set -g default-terminal "screen-256color"
 
+# tmux plugin manager
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'seebi/tmux-colors-solarized'
+
+set -g @colors-solarized 'dark'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
