--- a/tmux.conf
+++ b/tmux.conf
@@ -35,8 +35,8 @@ set-window-option -g window-status-activity-attr bold,blink,underscore
 set -g renumber-windows on
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
@@ -55,11 +55,11 @@ set -g status-interval 30
 set -g status-justify left
 
 # show session, window, pane in left status bar
-set -g status-left-length 40
-set -g status-left '#[fg=orange]#S#[fg=magenta] #I:#P#[default]'
+#set -g status-left-length 40
+#set -g status-left '#[fg=orange]#S#[fg=magenta] #I:#P#[default]'
 
 # show hostname, date, time, and battery in right status bar
-set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M #[fg=red]#(battery discharging)#[default]#(battery charging)'
+#set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M #[fg=red]#(battery discharging)#[default]#(battery charging)'
 
 ###########################
 # Colors
