trackpad  scroll for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,7 @@ set -g history-limit 30000
 # mouse options
 set -g mouse-utf8 on
 set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
