tmux open windows in the current path

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,8 @@ bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
-
+# open new window in the current_path
+bind c new-window -c "#{pane_current_path}"
 ###########################
 # Status Bar
 ###########################
