--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,7 @@ bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
-# open new window in the current_path
+# open new window in current_path
 bind c new-window -c "#{pane_current_path}"
 ###########################
 # Status Bar
@@ -80,6 +80,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 set -g @colors-solarized 'dark'
 
