--- a/tmux.conf
+++ b/tmux.conf
@@ -56,12 +56,26 @@ set -g status-interval 30
 # center the status bar
 set -g status-justify left
 
-# show session, window, pane in left status bar
-#set -g status-left-length 40
-#set -g status-left '#[fg=orange]#S#[fg=magenta] #I:#P#[default]'
+# ------------------------------------------------
+# Status Line
+# ------------------------------------------------
 
-# show hostname, date, time, and battery in right status bar
-#set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M #[fg=red]#(battery discharging)#[default]#(battery charging)'
+set -g status-left-length 32
+set -g status-right-length 150
+set -g status-fg white
+set -g status-bg colour234
+set -g window-status-activity-attr bold
+set -g pane-border-fg colour245
+set -g pane-active-border-fg colour39
+set -g message-fg colour16
+set -g message-bg colour221
+set -g message-attr bold
+set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold] #[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]'
+set -g window-status-format "#[fg=white,bg=colour234] #I #W "
+# set -g window-status-current-format "#[fg=colour234,bg=colour39] #[fg=black,bg=colour39,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
+# set -g window-status-current-format "#[fg=colour234,bg=colour39] #[fg=colour25,bg=colour39,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
+set -g window-status-current-format "#[fg=colour234,bg=colour39] #[fg=white,bg=colour39,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
+set -g status-right ' '
 
 ###########################
 # Colors
