Update Nvim & Tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # improve colors
-set -g terminal-overrides ',xterm-256color:Tc'
-set -g default-terminal "tmux-256color"
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
+set -g  default-terminal   'tmux-256color'            # replace this with your custom term-info name
+set -ga terminal-overrides ',*:Tc'                    # this is for 256 color
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # this is for the cursor shape
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
